# mouse_juggler

./: Cargo.toml  README.md  build.rs
resources/: resources.res
src/: calc.rs  main.rs  mouse.rs  my_window.rs
