[package]
name = "mouse_juggler"
version = "0.1.0"
edition = "2021"

[dependencies]
winsafe = { version = "0.0.23", features = ["gui", "user"]}

[profile.release]
opt-level = "z"  # optimization for minimal size
lto = true       # enabling Link-Time Optimization (LTO)
strip = true     # remove symbols from binary
codegen-units = 1 # reducing count of codegen units for better optimization
#panic = "abort"  # replace panics to abort (reducing size, but removes stacktraces)